--- a/src/main/resources/com/grupo02/videogamestore/buscar.fxml
+++ b/src/main/resources/com/grupo02/videogamestore/buscar.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.HBox?>
@@ -41,6 +42,12 @@
                      <children>
                         <CheckBox fx:id="byDate" mnemonicParsing="false" prefWidth="150.0" text="Por año:" />
                         <TextField fx:id="textDate" promptText="Ej: 2002" />
+                     </children>
+                  </VBox>
+                  <VBox fx:id="pDate1" alignment="CENTER_LEFT" fillWidth="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="20.0">
+                     <children>
+                        <CheckBox fx:id="byDeveloper" mnemonicParsing="false" prefWidth="150.0" text="Por desarrollador:" />
+                        <ComboBox fx:id="comboDeveloper" prefWidth="150.0" />
                      </children>
                   </VBox>
                </children>
