Cambios de estilos

--- a/src/main/resources/com/grupo02/videogamestore/Inicial.fxml
+++ b/src/main/resources/com/grupo02/videogamestore/Inicial.fxml
@@ -10,10 +10,14 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<VBox id="fondo" alignment="CENTER" cacheShape="false" centerShape="false" prefHeight="350.0" prefWidth="449.0" scaleShape="false" spacing="10.0" stylesheets="@../../../estilos/login.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.grupo02.videogamestore.InicialController">
+<VBox id="fondo" alignment="CENTER" cacheShape="false" centerShape="false" prefHeight="350.0" prefWidth="449.0" scaleShape="false" spacing="10.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.grupo02.videogamestore.InicialController">
    <children>
-      <Label fx:id="tit" text="BIENVENIDO" />
+      <Label fx:id="tit" text="BIENVENIDO">
+         <font>
+            <Font name="System Bold" size="37.0" />
+         </font></Label>
       <GridPane alignment="CENTER" hgap="10.0" prefWidth="340.0" vgap="10.0">
         <columnConstraints>
           <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
